# spatio-textual

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  code_prompts.md  pyproject.toml  requirements.txt  setup.py  setup.sh  spatio_textual_package_a_demo.ipynb
.github/workflows/: python-package.yml
.github/workflows/tests/: test_annotate.py
annotation/: entity_annotation.py  entity_annotator.py  test.py  utils.py
annotation/journey_extraction/: extract_journeys.py  gazetteer.json  geocode_cache.json  journey_extraction.py  journey_extractor.py  journeys.jsonl
annotation/journey_extraction/journey/: gazetteer.json  journeys.jsonl
annotation/journey_extraction/journeys/: journeys_gpt-4.5-preview.csv  journeys_gpt-4.5-preview.jsonl
annotation/journey_extraction/output/: journeys.csv  journeys.jsonl  neo4j_edges.csv  neo4j_nodes.csv
annotation/journey_extraction/sample_journeys/: journeys_o3-mini.csv  journeys_o3-mini.jsonl
annotation/resources/: family_relationships.txt  non_verbals.txt
annotation/resources/place_coordinates/: cities.tsv  continents.tsv  (+3 more)
data/: segmenter.py
data_samples/lake_district/: Budworth_cqp_26_1792_b.txt  Cockin_cqp_19_1780_a.txt
example-texts/: long-text  short-text
journeys/: journeys.csv  journeys.jsonl
sample_data/: extract_qa_pairs.py
sample_data/holocaust/: 10098.txt  1172.txt
sample_data/lake_district/: Brown_cqp_10_1767_a.txt  Cumberland_cqp_16_1776_c.txt
spatio_textual/: __init__.py  analysis.py  annotate.py  cli.py  emotion.py  event.py  events.py  llm.py  llm_hook.py  qa.py  sentiment.py  utils.py  viz.py
spatio_textual/resources/: cleaned_holocaust_camps.txt
tests/: __init__.py  test_annotate.py  test_data.json
(+4 files in other folders)
